--- a/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoAe0TptMF9DlXkZmizvgm"
+      "authorship_tag": "ABX9TyO9+KQfd9SjPnxlZynuAZTf"
     },
     "kernelspec": {
       "name": "python3",
@@ -582,6 +582,82 @@
       ],
       "metadata": {
         "id": "OLnYpAfnQC-0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **28. 중성화 여부 파악하기(250224)(String, Date)**"
+      ],
+      "metadata": {
+        "id": "edMlk5w59FsT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# ANIMAL_INS 테이블은 동물 보호소에 들어온 동물의 정보를 담은 테이블입니다.\n",
+        "# ANIMAL_INS 테이블 구조는 다음과 같으며, ANIMAL_ID, ANIMAL_TYPE, DATETIME, INTAKE_CONDITION, NAME, SEX_UPON_INTAKE는\n",
+        "# 각각 동물의 아이디, 생물 종, 보호 시작일, 보호 시작 시 상태, 이름, 성별 및 중성화 여부를 나타냅니다.\n",
+        "\n",
+        "# NAME\tTYPE\tNULLABLE\n",
+        "# ANIMAL_ID\tVARCHAR(N)\tFALSE\n",
+        "# ANIMAL_TYPE\tVARCHAR(N)\tFALSE\n",
+        "# DATETIME\tDATETIME\tFALSE\n",
+        "# INTAKE_CONDITION\tVARCHAR(N)\tFALSE\n",
+        "# NAME\tVARCHAR(N)\tTRUE\n",
+        "# SEX_UPON_INTAKE\tVARCHAR(N)\tFALSE\n",
+        "# 보호소의 동물이 중성화되었는지 아닌지 파악하려 합니다. 중성화된 동물은 SEX_UPON_INTAKE 컬럼에 'Neutered' 또는 'Spayed'라는 단어가 들어있습니다.\n",
+        "# 동물의 아이디와 이름, 중성화 여부를 아이디 순으로 조회하는 SQL문을 작성해주세요. 이때 중성화가 되어있다면 'O', 아니라면 'X'라고 표시해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# 예를 들어 ANIMAL_INS 테이블이 다음과 같다면\n",
+        "\n",
+        "# ANIMAL_ID\tANIMAL_TYPE\tDATETIME\tINTAKE_CONDITION\tNAME\tSEX_UPON_INTAKE\n",
+        "# A355753\tDog\t2015-09-10 13:14:00\tNormal\tElijah\tNeutered Male\n",
+        "# A373219\tCat\t2014-07-29 11:43:00\tNormal\tElla\tSpayed Female\n",
+        "# A382192\tDog\t2015-03-13 13:14:00\tNormal\tMaxwell 2\tIntact Male\n",
+        "# 중성화한 동물: Elijah, Ella\n",
+        "# 중성화하지 않은 동물: Maxwell 2\n",
+        "# 따라서 SQL문을 실행하면 다음과 같이 나와야 합니다.\n",
+        "\n",
+        "# ANIMAL_ID\tNAME\t중성화\n",
+        "# A355753\tElijah\tO\n",
+        "# A373219\tElla\tO\n",
+        "# A382192\tMaxwell 2\tX\n",
+        "# ※ 컬럼 이름은 일치하지 않아도 됩니다."
+      ],
+      "metadata": {
+        "id": "--uz4Aeo9LQu"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 내가 쓴 코드"
+      ],
+      "metadata": {
+        "id": "3vEq4oXB9gmF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT ANIMAL_ID, NAME,\n",
+        "#        CASE\n",
+        "#            WHEN SEX_UPON_INTAKE LIKE 'Neutered%' OR SEX_UPON_INTAKE LIKE 'Spayed%' THEN 'O'\n",
+        "#            ELSE 'X'\n",
+        "#        END AS 중성화\n",
+        "# FROM ANIMAL_INS\n",
+        "# ORDER BY ANIMAL_ID;"
+      ],
+      "metadata": {
+        "id": "9vC3bemt9iL6"
       },
       "execution_count": null,
       "outputs": []
