--- a/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q21_30_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO9+KQfd9SjPnxlZynuAZTf"
+      "authorship_tag": "ABX9TyNOH/tdfJ+O56kfd9EEjGKu"
     },
     "kernelspec": {
       "name": "python3",
@@ -589,7 +589,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **28. 중성화 여부 파악하기(250224)(String, Date)**"
+        "# **28. 중성화 여부 파악하기(250224)(String, Date)**(검색 도움)"
       ],
       "metadata": {
         "id": "edMlk5w59FsT"
@@ -658,6 +658,74 @@
       ],
       "metadata": {
         "id": "9vC3bemt9iL6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **29. 고양이와 개는 몇 마리 있을까(250225)(GROUP BY)**"
+      ],
+      "metadata": {
+        "id": "GxuECXhLqL_E"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# ANIMAL_INS 테이블은 동물 보호소에 들어온 동물의 정보를 담은 테이블입니다.\n",
+        "# ANIMAL_INS 테이블 구조는 다음과 같으며, ANIMAL_ID, ANIMAL_TYPE, DATETIME, INTAKE_CONDITION, NAME, SEX_UPON_INTAKE는\n",
+        "# 각각 동물의 아이디, 생물 종, 보호 시작일, 보호 시작 시 상태, 이름, 성별 및 중성화 여부를 나타냅니다.\n",
+        "\n",
+        "# NAME\tTYPE\tNULLABLE\n",
+        "# ANIMAL_ID\tVARCHAR(N)\tFALSE\n",
+        "# ANIMAL_TYPE\tVARCHAR(N)\tFALSE\n",
+        "# DATETIME\tDATETIME\tFALSE\n",
+        "# INTAKE_CONDITION\tVARCHAR(N)\tFALSE\n",
+        "# NAME\tVARCHAR(N)\tTRUE\n",
+        "# SEX_UPON_INTAKE\tVARCHAR(N)\tFALSE\n",
+        "# 동물 보호소에 들어온 동물 중 고양이와 개가 각각 몇 마리인지 조회하는 SQL문을 작성해주세요. 이때 고양이를 개보다 먼저 조회해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# 예를 들어 ANIMAL_INS 테이블이 다음과 같다면\n",
+        "\n",
+        "# ANIMAL_ID\tANIMAL_TYPE\tDATETIME\tINTAKE_CONDITION\tNAME\tSEX_UPON_INTAKE\n",
+        "# A373219\tCat\t2014-07-29 11:43:00\tNormal\tElla\tSpayed Female\n",
+        "# A377750\tDog\t2017-10-25 17:17:00\tNormal\tLucy\tSpayed Female\n",
+        "# A354540\tCat\t2014-12-11 11:48:00\tNormal\tTux\tNeutered Male\n",
+        "# 고양이는 2마리, 개는 1마리 들어왔습니다. 따라서 SQL문을 실행하면 다음과 같이 나와야 합니다.\n",
+        "\n",
+        "# ANIMAL_TYPE\tcount\n",
+        "# Cat\t2\n",
+        "# Dog\t1"
+      ],
+      "metadata": {
+        "id": "GH1bun6YqSXU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 내가 쓴 코드"
+      ],
+      "metadata": {
+        "id": "7OBKVDXMqgmF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT ANIMAL_TYPE, COUNT(ANIMAL_TYPE) as 'count'\n",
+        "# FROM ANIMAL_INS\n",
+        "# GROUP BY ANIMAL_TYPE\n",
+        "# ORDER BY ANIMAL_TYPE"
+      ],
+      "metadata": {
+        "id": "ZCcy4cldqhwH"
       },
       "execution_count": null,
       "outputs": []
