--- a/MySQL_Codingtest_Practice_lv1_2_q31_40_Programmers.ipynb
+++ b/MySQL_Codingtest_Practice_lv1_2_q31_40_Programmers.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNzARr9biSzMuKg05Pn1GIi"
+      "authorship_tag": "ABX9TyNNZOADdZMzuxt+gg3VsQPP"
     },
     "kernelspec": {
       "name": "python3",
@@ -195,6 +195,99 @@
       ],
       "metadata": {
         "id": "s0TSILOHukHE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **33. 상품별 오프라인 매출 구하기(250304)(JOIN)**"
+      ],
+      "metadata": {
+        "id": "13JOBglnLf7t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 문제 설명\n",
+        "# 다음은 어느 의류 쇼핑몰에서 판매중인 상품들의 상품 정보를 담은 PRODUCT 테이블과 오프라인 상품 판매 정보를 담은 OFFLINE_SALE 테이블 입니다.\n",
+        "# PRODUCT 테이블은 아래와 같은 구조로 PRODUCT_ID, PRODUCT_CODE, PRICE는 각각 상품 ID, 상품코드, 판매가를 나타냅니다.\n",
+        "\n",
+        "# Column name\tType\tNullable\n",
+        "# PRODUCT_ID\tINTEGER\tFALSE\n",
+        "# PRODUCT_CODE\tVARCHAR(8)\tFALSE\n",
+        "# PRICE\tINTEGER\tFALSE\n",
+        "# 상품 별로 중복되지 않는 8자리 상품코드 값을 가지며, 앞 2자리는 카테고리 코드를 의미합니다.\n",
+        "\n",
+        "# OFFLINE_SALE 테이블은 아래와 같은 구조로 되어있으며 OFFLINE_SALE_ID, PRODUCT_ID, SALES_AMOUNT, SALES_DATE는 각각 오프라인 상품 판매 ID, 상품 ID, 판매량, 판매일을 나타냅니다.\n",
+        "\n",
+        "# Column name\tType\tNullable\n",
+        "# OFFLINE_SALE_ID\tINTEGER\tFALSE\n",
+        "# PRODUCT_ID\tINTEGER\tFALSE\n",
+        "# SALES_AMOUNT\tINTEGER\tFALSE\n",
+        "# SALES_DATE\tDATE\tFALSE\n",
+        "# 동일한 날짜, 상품 ID 조합에 대해서는 하나의 판매 데이터만 존재합니다.\n",
+        "\n",
+        "# 문제\n",
+        "# PRODUCT 테이블과 OFFLINE_SALE 테이블에서 상품코드 별 매출액(판매가 * 판매량) 합계를 출력하는 SQL문을 작성해주세요.\n",
+        "# 결과는 매출액을 기준으로 내림차순 정렬해주시고 매출액이 같다면 상품코드를 기준으로 오름차순 정렬해주세요.\n",
+        "\n",
+        "# 예시\n",
+        "# 예를 들어 PRODUCT 테이블이 다음과 같고\n",
+        "\n",
+        "# PRODUCT_ID\tPRODUCT_CODE\tPRICE\n",
+        "# 1\tA1000011\t15000\n",
+        "# 2\tA1000045\t8000\n",
+        "# 3\tC3000002\t42000\n",
+        "# OFFLINE_SALE 테이블이 다음과 같다면\n",
+        "\n",
+        "# OFFLINE_SALE_ID\tPRODUCT_ID\tSALES_AMOUNT\tSALES_DATE\n",
+        "# 1\t1\t2\t2022-02-21\n",
+        "# 2\t1\t2\t2022-03-02\n",
+        "# 3\t3\t3\t2022-05-01\n",
+        "# 4\t2\t1\t2022-05-24\n",
+        "# 5\t1\t2\t2022-07-14\n",
+        "# 6\t2\t1\t2022-09-22\n",
+        "# 각 상품 별 총 판매량과 판매가는 다음과 같습니다.\n",
+        "\n",
+        "# PRODUCT_CODE 가 A1000011인 상품은 총 판매량이 6개, 판매가가 15,000원\n",
+        "# PRODUCT_CODE 가 A1000045인 상품은 총 판매량이 2개, 판매가가 8,000원\n",
+        "# PRODUCT_CODE 가 C3000002인 상품은 총 판매량이 3개, 판매가가 42,000원\n",
+        "# 그러므로 각 상품 별 매출액을 계산하고 정렬하면 결과가 다음과 같이 나와야 합니다.\n",
+        "\n",
+        "# PRODUCT_CODE\tSALES\n",
+        "# C3000002\t126000\n",
+        "# A1000011\t90000\n",
+        "# A1000045\t16000"
+      ],
+      "metadata": {
+        "id": "OZ2SRpo6LlML"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1) 내가 쓴 코드"
+      ],
+      "metadata": {
+        "id": "-dGse6xiLxkC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# SELECT p.PRODUCT_CODE, SUM(p.PRICE * o.SALES_AMOUNT) AS SALES\n",
+        "# FROM PRODUCT p\n",
+        "# JOIN OFFLINE_SALE o ON p.PRODUCT_ID = o.PRODUCT_ID\n",
+        "# GROUP BY p.PRODUCT_CODE\n",
+        "# ORDER BY SALES DESC, p.PRODUCT_CODE ASC;"
+      ],
+      "metadata": {
+        "id": "3ZIIZraqLykX"
       },
       "execution_count": null,
       "outputs": []
